--- a/index.html
+++ b/index.html
@@ -29,75 +29,106 @@
       <div class="app-container">
         <div class="city">
           <div class="city__location">
-            <h1 class="city__location--name">ACCRA</h1>
+            <h1 class="city__location--name"></h1>
           </div>
           <div class="city__date">
-            <span class="city__date--value">Sunday, 12th June, 2021</span>
+            <span class="city__date--value"></span>
           </div>
         </div>
         <div class="condition">
           <div class="condition__status">
-            <img
-              src="./src/img/icons/1.svg"
-              alt="Icons"
-              class="condition__status--icon"
-            />
-            <span class="condition__status--value">Sunny</span>
+            <img src="" alt="Icons" class="condition__status--icon" />
+            <span class="condition__status--value"></span>
           </div>
           <div class="condition__temp">
-            <span class="condition__temp--value">27</span>
-            <span class="condition__temp--icon">C</span>
+            <span class="condition__temp--value"></span>
           </div>
         </div>
       </div>
       <div class="others">
         <div class="others__condition">
-          <span>Humidity</span> : <span>60%</span>
+          <span>Humidity</span> :
+          <span class="others__humidity--value"></span>
         </div>
         <div class="others__condition">
-          <span>Wind Speed</span> : <span>4.7MPG</span>
+          <span>Wind Speed</span> :
+          <span class="others__wind--value"></span>
         </div>
         <div class="others__condition">
-          <span>UV Index</span> : <span>11.82</span>
+          <span>Pressure</span> :
+          <span class="others__pressure--value"></span>
         </div>
       </div>
       <div class="forecast">
         <div class="forecast__day">
           <div class="forecast__day--date">Sunday, 13th June, 2021</div>
           <div class="condition__status">
-            <img src="./src/img/icons/1.svg" alt="Icons" />
-            <span class="condition__status--value">Sunny</span>
+            <img
+              src="./src/img/icons/1.svg"
+              alt="Icons"
+              class="forecast__day--icon"
+            />
+            <span class="condition__status--value forecast__day--status"
+              >Sunny</span
+            >
           </div>
         </div>
         <div class="forecast__day">
           <div class="forecast__day--date">Monday, 14th June, 2021</div>
           <div class="condition__status">
-            <img src="./src/img/icons/4.svg" alt="Icons" />
-            <span class="condition__status--value">Partly Cloudy</span>
+            <img
+              src="./src/img/icons/4.svg"
+              alt="Icons"
+              class="forecast__day--icon"
+            />
+            <span class="condition__status--value forecast__day--status"
+              >Partly Cloudy</span
+            >
           </div>
         </div>
         <div class="forecast__day">
           <div class="forecast__day--date">Tuesday, 15th June, 2021</div>
           <div class="condition__status">
-            <img src="./src/img/icons/13.svg" alt="Icons" />
-            <span class="condition__status--value">Heavy Rain</span>
+            <img
+              src="./src/img/icons/13.svg"
+              alt="Icons"
+              class="forecast__day--icon"
+            />
+            <span class="condition__status--value forecast__day--status"
+              >Heavy Rain</span
+            >
           </div>
         </div>
         <div class="forecast__day">
           <div class="forecast__day--date">Wednesday, 16th June, 2021</div>
           <div class="condition__status">
-            <img src="./src/img/icons/6.svg" alt="Icons" />
-            <span class="condition__status--value">Cloudy</span>
+            <img
+              src="./src/img/icons/6.svg"
+              alt="Icons"
+              class="forecast__day--icon"
+            />
+            <span class="condition__status--value forecast__day--status"
+              >Cloudy</span
+            >
           </div>
         </div>
         <div class="forecast__day">
           <div class="forecast__day--date">Thursay, 17th June, 2021</div>
           <div class="condition__status">
-            <img src="./src/img/icons/11.svg" alt="Icons" />
-            <span class="condition__status--value">Slightly Cloudy</span>
+            <img
+              src="./src/img/icons/11.svg"
+              alt="Icons"
+              class="forecast__day--icon"
+            />
+            <span class="condition__status--value forecast__day--status"
+              >Slightly Cloudy</span
+            >
           </div>
         </div>
       </div>
     </main>
+
+    <script src="./src/js/forecast.js"></script>
+    <script src="./src/js/app.js"></script>
   </body>
 </html>
