removed icons in html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="condition">
           <div class="condition__status">
-            <img src="" alt="Icons" class="condition__status--icon" />
+            <img src="alt" ="Icons" class="condition__status--icon" />
             <span class="condition__status--value"></span>
           </div>
           <div class="condition__temp">
@@ -63,11 +63,7 @@
         <div class="forecast__day">
           <div class="forecast__day--date">Sunday, 13th June, 2021</div>
           <div class="condition__status">
-            <img
-              src="./src/img/icons/1.svg"
-              alt="Icons"
-              class="forecast__day--icon"
-            />
+            <img src="" alt="Icons" class="forecast__day--icon" />
             <span class="condition__status--value forecast__day--status"
               >Sunny</span
             >
@@ -76,11 +72,7 @@
         <div class="forecast__day">
           <div class="forecast__day--date">Monday, 14th June, 2021</div>
           <div class="condition__status">
-            <img
-              src="./src/img/icons/4.svg"
-              alt="Icons"
-              class="forecast__day--icon"
-            />
+            <img src="" alt="Icons" class="forecast__day--icon" />
             <span class="condition__status--value forecast__day--status"
               >Partly Cloudy</span
             >
@@ -89,11 +81,7 @@
         <div class="forecast__day">
           <div class="forecast__day--date">Tuesday, 15th June, 2021</div>
           <div class="condition__status">
-            <img
-              src="./src/img/icons/13.svg"
-              alt="Icons"
-              class="forecast__day--icon"
-            />
+            <img src="" alt="Icons" class="forecast__day--icon" />
             <span class="condition__status--value forecast__day--status"
               >Heavy Rain</span
             >
@@ -102,11 +90,7 @@
         <div class="forecast__day">
           <div class="forecast__day--date">Wednesday, 16th June, 2021</div>
           <div class="condition__status">
-            <img
-              src="./src/img/icons/6.svg"
-              alt="Icons"
-              class="forecast__day--icon"
-            />
+            <img src="" alt="Icons" class="forecast__day--icon" />
             <span class="condition__status--value forecast__day--status"
               >Cloudy</span
             >
@@ -115,11 +99,7 @@
         <div class="forecast__day">
           <div class="forecast__day--date">Thursay, 17th June, 2021</div>
           <div class="condition__status">
-            <img
-              src="./src/img/icons/11.svg"
-              alt="Icons"
-              class="forecast__day--icon"
-            />
+            <img src="" alt="Icons" class="forecast__day--icon" />
             <span class="condition__status--value forecast__day--status"
               >Slightly Cloudy</span
             >
@@ -128,7 +108,7 @@
       </div>
     </main>
 
-    <script src="./src/js/forecast.js"></script>
-    <script src="./src/js/app.js"></script>
+    <script src=""></script>
+    <script src=""></script>
   </body>
 </html>
