added app title

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <body>
     <main class="app">
       <form class="form">
+        <span class="form__title">Mega Weather App</span>
         <input
           type="search"
           name="city"
