fixed html alt bug

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </div>
           <div class="condition">
             <div class="condition__status">
-              <img src="" ="Icons" class="condition__status--icon" />
+              <img src="" alt="Icons" class="condition__status--icon" />
               <span class="condition__status--value"></span>
             </div>
             <div class="condition__temp">
