fixed css bugs and err handling

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           class="form__search"
         />
       </form>
-      <div class="app-holder hide">
+      <div class="app-holder">
         <div class="app-container">
           <div class="city">
             <div class="city__location">
@@ -43,7 +43,7 @@
               <span class="condition__status--value"></span>
             </div>
             <div class="condition__temp">
-              <span class="condition__temp--value"></span>
+              <span class="condition__temp--value">37</span>
             </div>
           </div>
         </div>
